--- a/conceptual/index.html
+++ b/conceptual/index.html
@@ -12,22 +12,19 @@
 		/>
 	</head>
 	<body>
-        <h1 id="title">
-            Hello world
+        <h1 id="count" class="text-center mt-5">
+          0
         </h1>
 
         <div class="text-center">
-            <button id="prime" class="mt-3 p-3 button-test">
-                button-1
+            <button id="add" class="mt-3 p-3 button-test btn btn-primary">
+            +
             </button>
-            <br>
-            <button class="mt-3 p-3 button-test">
-                button-2
+          
+            <button id="minus" class="mt-3 p-3 button-test btn btn-danger ">
+               -
             </button>
-            <br>
-            <button class="mt-3 p-3 button-test">
-                 button-3
-            </button>
+            
         </div>
 
         <script src="./app.js"></script>
