--- a/conceptual/index.html
+++ b/conceptual/index.html
@@ -17,11 +17,11 @@
         </h1>
 
         <div class="text-center">
-            <button id="add" class="mt-3 p-3 button-test btn btn-primary">
+            <button onclick="add()" id="add" class="mt-3 p-3 button-test btn btn-primary">
             +
             </button>
           
-            <button id="minus" class="mt-3 p-3 button-test btn btn-danger ">
+            <button onclick="minus()" id="minus" class="mt-3 p-3 button-test btn btn-danger ">
                -
             </button>
             
